# code-write-wise

./: CMakeLists.txt  README.md  architecture.txt
include/core/: document.hpp  writer.hpp
src/: document.cpp  main.cpp  writer.cpp
